<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivAvatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/default_avatar"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="1dp" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/ivAvatar"
            android:text="@string/friend_user_name"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/tvName"
            android:layout_below="@id/tvName"
            android:text="@string/friend_request"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivAvatar"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btAgree"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/bubble_right_background_layout"
                android:text="@string/friend_accept"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btRefuse"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/bubble_background_layout"
                android:text="@string/friend_deny"
                android:textAllCaps="false"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>