<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:padding="5dp">

    <RelativeLayout
        android:id="@+id/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_post_background_layout">

        <RelativeLayout
            android:id="@+id/layoutTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivAvatar"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/default_avatar"
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/ivAvatar"
                android:background="@color/colorWhite"
                android:text="@string/post_user_name"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/tvName"
                android:layout_below="@id/tvName"
                android:text="@string/post_time"
                android:textColor="@color/colorGray"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivAvatar"
                android:layout_marginTop="10dp"
                android:background="@color/colorWhite"
                android:maxLines="5"
                android:text="@string/post_status" />

            <TextView
                android:id="@+id/tvMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/tvStatus"
                android:layout_below="@id/tvStatus"
                android:text="@string/post_more"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:visibility="gone" />
        </RelativeLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/layoutTop"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view"
            android:orientation="horizontal"
            android:weightSum="2"
            tools:ignore="DisableBaselineAlignment">

            <RelativeLayout
                android:layout_width="1000dp"
                android:layout_height="50dp"
                android:layout_weight="1">

                <com.github.ivbaranov.mfb.MaterialFavoriteButton
                    android:id="@+id/btFavorite"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    app:mfb_type="heart" />

                <TextView
                    android:id="@+id/tvFavorite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/btFavorite"
                    android:layout_alignTop="@id/btFavorite"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/btFavorite"
                    android:gravity="center_vertical"
                    android:text="@string/post_favorite" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layoutComment"
                android:layout_width="1000dp"
                android:layout_height="50dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/ivComment"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:padding="15dp"
                    android:src="@drawable/comment"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tvComment"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_toEndOf="@id/ivComment"
                    android:gravity="center_vertical"
                    android:text="@string/post_comment" />
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>